--- a/style.css
+++ b/style.css
@@ -1,26 +1,55 @@
-*{
-    margin-left: 20px;
-    margin-right: 20px;
-    padding:0;
-    box-sizing: border-box;
+
+/* publish to br-architects006.surge.sh */
+
+ *{
+     padding:0;
+     box-sizing: border-box;
+     font-family: sans-serif;
+} 
+/* total margin of the page is 40px left and right without header and footer */
+body{
+    margin: 40px;
 }
+/* header styling */
 header{
+    display: flex;
+    justify-content: space-between;
+
     height: 45px;
     position: fixed;
     top: 0;
+    left: 0;
     background-color: white;
+    border-bottom: 1px solid #DBDBDB;
+    width: 100%;
 }
-header div1{
+/* styling for project, contact and about options */
+#div1{
     display: flex;
+    margin-top: 12px;
+    margin-left: 20px;
+    letter-spacing: 3px;
 }
+ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+header li{
+    margin-right: 10px;
+    
+    letter-spacing: 2px;
+}
+/* setting for the cover picture of the company on the top section */
 #top_pic
 {
-background-image: url("/Image/architect.jpg");
+background-image: url("/images/architect.jpg");
 background-position: center;
 background-repeat: no-repeat;
 width: 100%;
 height: 100vh;
 }
+/* styling for the company logo on the cover picture on the top section BR Architects */
 #top_pic div{
     text-align: center;
     padding-top: 300px;
@@ -29,34 +58,85 @@ height: 100vh;
 }
 #top_pic span{
     background-color: black;
+    opacity: 0.7;
+    padding: 5px;
 }
-
-/*.pro_pics{
+/* styling for the images in project and about section */
+.pro_pics1{
  display: flex;
- width: 150px;
- height: 150px;
-}*/
-
+ flex-direction: row;
+ 
+}
+.pro_pics2{
+    display: flex;
+    flex-direction: row;
+}
+.pro_pics1 img, .pro_pics2 img{
+    width: 285px;
+    margin: 10px 20px 10px 0;
+}
 #pics{
     display: flex;
+    flex-direction: column;
+    
 }
-.abc{
+.abc, .def{
     position: relative;
-    top: -337px;
+    top: -202px;
     left: 0px;
     color: white;
     background-color: black;
 }
-.def
-{
-    position: relative;
-    top: -337px;
-    left: 0px;
-    color: white;
-    background-color: black;
-}
+/* footer styling with background black fixed on the screen */
 footer{
     background-color: black;
-    height: 45px;
+    height: 36px;
     color: white;
+    width: 100%;
+    position: fixed;
+    padding-top: 10px;
+    bottom: 0;
+    left: 0;
+}
+footer a{
+    color: white;
+}
+
+#abt2{
+    display: flex;
+    min-width: 230px;
+    margin: 0 -31px 0 -1px;
+    
+}
+/* styling for the button in contact section */
+.btn1{
+    background-color: #F1F1F1;
+    border: none;
+    width: 90%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+/* button styling for the form section */
+#btn2{
+    background-color: black;
+    color: white;
+    padding: 12px;
+    border: none;
+}
+/* class for the name of the people and their titles in the company in about section */
+.name{
+font-size: larger;
+}
+.title{
+font-size: medium;
+color: #909090;
+
+margin-top: 10px;
+margin-bottom: 10px;
+}
+/* styling of form section */
+input{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
 }
